fix alignment

--- a/src/widgets/Testimonials/Testimoials.module.css
+++ b/src/widgets/Testimonials/Testimoials.module.css
@@ -14,6 +14,7 @@
 .swiper {
     max-width: 800px;
     cursor: grab;
+    margin-bottom: 20px;
 }
 
 .img {
@@ -90,12 +91,17 @@
         right: 10px;
     }
 
+
+
+    .swiper,
     .title {
         margin-bottom: 30px;
     }
 }
 
 @media(min-width:600px) {
+
+    .swiper,
     .title {
         margin-bottom: 40px;
     }
@@ -120,6 +126,7 @@
         background-color: var(--color-light-gray);
     }
 
+    .swiper,
     .title {
         margin-bottom: 60px;
     }
