--- a/src/widgets/Testimonials/TestimonialSlide/TestimonialSlide.module.css
+++ b/src/widgets/Testimonials/TestimonialSlide/TestimonialSlide.module.css
@@ -7,7 +7,6 @@
     grid-template-areas: "avatar name" "avatar rating" ". ." "testimonial testimonial";
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 30px;
 }
 
 .name {
